--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div id="profile-content">
                         <p>이름 : 백소영</p>
                         <p>나이 : 24세</p>
-                        <p>사는 곳 : 서울시 구로구 오류동</p>
+                        <p>사는 곳 : 서울시 구로구</p>
                         <p>개발 분야 : 백엔드 개발</p>
                     </div>
                     <br>
@@ -48,67 +48,102 @@
                     </div>
                 </div>
             </div>
-            <div id="career">
+            <section id="career" class="timeline">
                 <h1>경력</h1>
                 <!-- 타임라인 가로 바 이용 -->
-                <pre>
-                    2013.03 ~ 2016.02
-                    학교명 : 구미전자공업고등학교
-                    학과 : 로봇제어 전공
-                </pre>
-                <pre>
-                    2015.12 ~ 2018.04
-                    회사명 : 디오티스
-                    업무 : 보이는 ARS 서버 개발 및 테스트
-                </pre>
-                <pre>
-                    2017.03 ~ 2019.02
-                    학교 : 동국대학교 전산원
-                    학과 : 컴퓨터 공학
-                </pre>
-                <pre>
-                    2018.05 ~ 2018.11
-                    알바명 : 파리바게트
-                    업무 : 캐셔 및 매장정리
-                </pre>
-                <pre>
-                    2018.11 ~ 2019.02
-                    교육기관 : 멀티캠퍼스
-                    교육명 : 지능형 ioT봇을 활용한 빅데이터 전문가
-                </pre>
-                <pre>
-                    2019.08 ~ 2019.09
-                    회사명 : 비타소프트
-                    업무 : 웹 개발 및 유지보수
-                </pre>
-                <pre>
-                    2020.01 ~ 2020.02
-                    교육기관 : 이노베이션 아카데미 (42서울)
-                    교육내용 : 리눅스 쉘 및 C언어
-                </pre>
-            </div>
+                <div class="ol-wrapper">
+                    <ol>
+                        <li>
+                            <div>
+                                <time>2013.03 ~ 2016.02</time>
+                                <p>학교명 : 구미전자공업고등학교</p>
+                                <p>학과 : 로봇제어 전공</p>
+                            </div>                        
+                        </li>
+                        <li>
+                            <div>
+                                <time>2015.12 ~ 2018.04</time>
+                                <p>회사명 : 디오티스</p>
+                                <p>업무 : 보이는 ARS 서버 개발 및 테스트</p>
+                            </div>                        
+                        </li>
+                        <li>
+                            <div>
+                                <time>2017.03 ~ 2019.02</time>
+                                <p>학교 : 동국대학교 전산원</p>
+                                <p>학과 : 컴퓨터 공학</p>
+                            </div>
+                        </li>
+                        <!-- <li>
+                            <div>
+                                <time>2018.05 ~ 2018.11</time>
+                                <p>알바명 : 파리바게트</p>
+                                <p>업무 : 캐셔 및 매장정리</p>
+                            </div>
+                        </li> -->
+                        <li>
+                            <div>
+                                <time>2018.11 ~ 2019.02</time>
+                                <p>교육기관 : 멀티캠퍼스</p>
+                                <p>교육명 : 지능형 ioT봇을 활용한 빅데이터 전문가</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <time>2019.08 ~ 2019.09</time>
+                                <p>회사명 : 비타소프트</p>
+                                <p>업무 : 웹 개발 및 유지보수</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <time>2020.01 ~ 2020.02</time>
+                                <p>교육기관 : 이노베이션 아카데미 (42서울)</p>
+                                <p>교육내용 : 리눅스 쉘 및 C언어</p>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+                <div class="arrows">
+                    <button class="arrow arrow__prev disabled" disabled>
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_prev.svg" alt="prev timeline arrow">
+                    </button>
+                    <button class="arrow arrow__next">
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
+                    </button>
+                </div>
+            </section>
             <div id="hobby">
                 <h1>관심사</h1>
                 <!-- 동그라미 CSS 이용 -->
-                <p>WEB 개발</p>
-                <span>
-                    프론트엔드, 백엔드 구분없이 전반적인 웹 개발에 관심이 많습니다!
-                    회사에 다닐 때 점심투표 하는 웹 어플리케이션을 제작한 적이 있습니다.
-                </span>
-                <p>IOS APP 개발</p>
-                <span>
-                    애플 제품의 덕후 중 한 사람으로서 앱 제작을 해보고 싶습니다.
-                    생각해놓은 아이디어는 다이어리 앱과 일상생활 기록 앱 입니다.
-                </span>
-                <p>드라마 및 예능</p>
-                <span>
-                    영화 덕후인 아버지의 영향으로 드라마 및 예능 시청을 즐깁니다.
-                    좋아하는 드라마로는 학교 시리즈, 청춘시대, 나의 아저씨 이고
-                    좋아하는 예능은 대한외국인, 문제적남자, 구해줘홈즈 입니다!
-                </span>
+                <div class="parent">
+                    <div class="first">
+                        <p>WEB 개발</p>
+                        <span>
+                            프론트엔드, 백엔드 구분없이 전반적인 웹 개발에 관심이 많습니다!
+                            회사에 다닐 때 점심투표 하는 웹 어플리케이션을 제작한 적이 있습니다.
+                        </span> 
+                    </div>
+                    <div class="second">
+                        <p>IOS APP 개발</p>
+                        <span>
+                            애플 제품의 덕후 중 한 사람으로서 앱 제작을 해보고 싶습니다.
+                            생각해놓은 아이디어는 다이어리 앱과 일상생활 기록 앱 입니다.
+                        </span>
+                    </div>
+                    <div class="third">
+                        <p>드라마 및 예능</p>
+                        <span>
+                            영화 덕후인 아버지의 영향으로 드라마 및 예능 시청을 즐깁니다.
+                            좋아하는 드라마로는 학교 시리즈, 청춘시대, 나의 아저씨 이고
+                            좋아하는 예능은 대한외국인, 문제적남자, 구해줘홈즈 입니다!
+                        </span>
+                    </div>
+                </div>    
             </div>
             <div id="personality">
                 <h1>성향</h1>
+                <img src="./images/mbti_intp.png" alt="나의 사진">
                 <!-- 오각형 자바스크립트 라이브러리 이용 -->
                 <!-- 아니면 mbti 성격 결과 첨부 -->
                 <span>소심함</span>
@@ -132,5 +167,6 @@
                 <span>앞으로 3개월동안 같이 재밌게 개발합시다ㅎㅎ</span>
             </div>
         </main>
+        <script type="text/javascript" src="./js/career.js"></script>
     </body>
 </html>
